--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 
 <header class="masthead">
   <h1 class="masthead-title--small">
+    <a href="{{ site.baseurl }}/">RNS Institute of Technology</a>
     <a href="{{ site.baseurl }}/">{{ site.name }}</a>
   </h1>
 </header>
