--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,11 @@ layout: default
 
 
 <header class="masthead">
-  <h1 class="masthead-title--small">
-    <a href="{{ site.baseurl }}/">RNS Institute of Technology</a>
-    <a href="{{ site.baseurl }}/">{{ site.name }}</a>
-  </h1>
+  <h3 class="masthead-title--small">
+   <h2> <a href="{{ site.baseurl }}/">RNS Institute of Technology</a></h2>
+   <br>
+   <h2> <a href="{{ site.baseurl }}/">{{ site.name }}</a></h2>
+   </h1>
 </header>
 <div class="content post">
   <h1 class="post-title">{{ page.title }}</h1>
