--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ layout: default
 
 <header class="masthead">
   <h3 class="masthead-title--small">
-   <h2> <a href="{{ site.baseurl }}/">RNS Institute of Technology</a></h2>
+    <a href="{{ site.baseurl }}/">RNS Institute of Technology</a>
    <br>
-   <h2> <a href="{{ site.baseurl }}/">{{ site.name }}</a></h2>
+   <a href="{{ site.baseurl }}/">{{ site.name }}</a>
    </h1>
 </header>
 <div class="content post">
