--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,15 @@ layout: default
 ---
 
 
+<style>
+a:link {
+    color: black;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+</style>
+
 <header class="masthead">
   <h3 class="masthead-title--small">
     <a href="{{ site.baseurl }}/">RNS Institute of Technology</a>
